// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaterialButton /> Snaphot contained must match containedDefaultMaterialButton 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 MuiButton-colorInherit-24 MaterialButton-button-1"
  disabled={false}
  href=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Default
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</button>
`;

exports[`<MaterialButton /> Snaphot contained must match containedDisabledMaterialButton 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButtonBase-disabled-30 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 MuiButton-disabled-23 MuiButton-colorInherit-24 MaterialButton-button-1"
  disabled={true}
  href=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Disabled
  </span>
</button>
`;

exports[`<MaterialButton /> Snaphot contained must match containedLinkMaterialButton 1`] = `
<a
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 MuiButton-colorInherit-24 MaterialButton-button-1"
  href="https://github.com/code-star/phoenix"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <span
    className="MuiButton-label-4"
  >
    Link
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</a>
`;

exports[`<MaterialButton /> Snaphot contained must match containedPrimaryMaterialButton 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MaterialButton-button-1"
  disabled={false}
  href=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Primary
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</button>
`;

exports[`<MaterialButton /> Snaphot contained must match containedSecondaryMaterialButton 1`] = `
<button
  className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedSecondary-16 MuiButton-raised-17 MuiButton-raisedSecondary-19 MaterialButton-button-1"
  disabled={false}
  href=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-4"
  >
    Secondary
  </span>
  <span
    className="MuiTouchRipple-root-32"
  />
</button>
`;

exports[`<MaterialButton /> Snaphot contained must match containedUploadMaterialButton 1`] = `
Array [
  <input
    accept="image/*"
    className="MaterialButton-input-2"
    id="contained-button-file"
    multiple={true}
    type="file"
  />,
  <label
    htmlFor="contained-button-file"
  >
    <span
      className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-raised-17 MaterialButton-button-1"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-4"
      >
        Upload
      </span>
      <span
        className="MuiTouchRipple-root-32"
      />
    </span>
  </label>,
]
`;
